# extract-openapi-scheme

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  static.yml  version_bumper.yml
hooks/: cli_command.py
hooks/extractor/: __init__.py  extractor.py  extractor_fastapi_cli.py
src/extractor/: enums.py  exceptions.py
tests/: conftest.py  test_extractor.py
tests/apps/: django_app.py  fastapi.py
